--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
 {
   "autoload": {
     "psr-4": {
-      "GRONC\\WCFM\\Controllers\\": "wcfm-menus/controllers"
+      "GRONC\\Controllers\\": "controllers/",
+      "GRONC\\": "inc/"
     }
   }
 }
